# money-manager-mcp-server

./: .gitignore  README.md  pyproject.toml  schema-explained.md  server.py
mcp_server_piggy/: __init__.py  sqlite-reference.py
sqls/: expenses.view.sql
